Fixing overflow bug in the envitation section in the content

--- a/css/desktop-style.css
+++ b/css/desktop-style.css
@@ -156,6 +156,7 @@
 
     main.content section.envitation {
         height: 1000px;
+        overflow-x: hidden;
     }
 
     main.content section.envitation h2 {
